# sfml-game-2d

./: CMakeLists.txt
Assets/UI/: Entry.json
src/Engine/: GEngine.cpp  Identify.hpp
src/Engine/Core/: Application.cpp  Application.hpp  Scene.hpp
src/Engine/Manager/: AssetManager.cpp  AssetManager.hpp  UIManager.cpp  UIManager.hpp
src/Engine/UI/Common/: Label.cpp  Label.hpp
src/Engine/UI/Widget/: Widget.hpp
src/Game/Scene/: EntryScene.cpp  EntryScene.hpp
